@@ -1,5 +1,9 @@
 2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Improve error reporting.
+
+2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove multiple root
 	element validation from here because it's not easy to override.
 
